# px4_rl_uav

./: CMakeLists.txt  README.md  package.xml
misc/: iris_rplidar.world
misc/iris_rplidar/: iris_rplidar.sdf
misc/lidar/: model.sdf
misc/rplidar/: model.sdf
px4_rl_uav/: pytorch_model.py
px4_rl_uav/agent/: DDPG.py  SAC.py  SoftQ.py  TD3.py
px4_rl_uav/environment/GazeboEnv/Quadrotor/: BaseGazeboUAVPosEnv.py  BaseGazeboUAVPosObsEnv.py  BaseGazeboUAVVelEnv.py  BaseGazeboUAVVelObsEnv.py  BaseGazeboUAVVelObsEnvSimp.py  BaseGazeboUAVVelObsEnvSimpPX4.py
scripts/: main.py  px4_test.py
